newclay/test/Compiler/Propagation/Fail/RecursivePropagationStatements2/main.clay
foo(x) {
    if (true)
        return foo(x);
    return foo(x);
}

main() {
    return foo(1);
}
